--- a/package.json
+++ b/package.json
@@ -1,22 +1,47 @@
 {
-  "name": "swapper",
-  "version": "0.0.0",
+  "name": "stunning-green",
+  "version": "0.1.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
+    "hardhat": "^2.9.9",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.0",
     "@tailwindcss/jit": "^0.1.18",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "autoprefixer": "^10.3.4",
+    "chai": "^4.2.0",
+    "ethereum-waffle": "^3.0.0",
+    "ethers": "^5.0.0",
     "postcss": "^8.3.6",
     "tailwindcss": "^2.2.14",
     "vite": "^2.5.4"
-  }
+  },
+  "description": "1- Check your node version",
+  "main": "postcss.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/StunningGreen/stunninggreen.git"
+  },
+  "keywords": [
+    "sustainability",
+    "architecture",
+    "blockchain",
+    "celo"
+  ],
+  "author": "Paulo Almeida & Teresa Rodriguez",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/StunningGreen/stunninggreen/issues"
+  },
+  "homepage": "https://github.com/StunningGreen/stunninggreen#readme"
 }
